--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express-handlebars": "^3.0.2",
     "express3-handlebars": "^0.5.2",
     "handlebars": "^4.1.0",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "passport": "^0.4.0"
   }
 }
+
