--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -19,13 +19,16 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
+    "chai": "^4.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.15.6",
     "express3-handlebars": "^0.5.2",
     "handlebars": "^4.1.0",
+    "mocha": "^6.0.2",
     "mysql": "^2.16.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "request": "^2.88.0"
   }
 }
